added opton to clean

--- a/project.config
+++ b/project.config
@@ -7,6 +7,8 @@
 	
 	"INCLUDE_DIR": ["../src/core", "../src/include", "../dep/glfw/include", "../dep/glew/include"], 
 
+	"CLEAN_EXT": [".o"],
+
 	"BUILD_TARGET":{
 		"clang": ["win64"]
 	},	
