Readme.md update + experimental javac tooclchain addition

--- a/toolchain.config
+++ b/toolchain.config
@@ -34,10 +34,10 @@
 	"javac":{
 		"jvm":{
 			"BIN_EXTENTION":".jar",
-			"INC_PREFIX":"-I",
-			"LIB_PREFIX":"-l", 
-			"BUILD_CMD":"", 
-			"LINK_CMD": "javac -o [BIN] [LDFLAGS] [OBJ_FILES] [LIBS]"
+			"INC_PREFIX":"-classpath ",
+			"LIB_PREFIX":"", 
+			"BUILD_CMD":"javac [INCLUDE_DIRS] [SRC_FILE]", 
+			"LINK_CMD": "jar cvfe [BIN] [MAIN] [LIBS] [OBJ_FILES]"
 		}
 	}
 }
